# computer-science---3-period

./: .gitignore  README.md
api_platform/api-platorm-backend/: pyproject.toml
api_platform/api-platorm-backend/admin/: app.py  pyproject.toml
api_platform/api-platorm-backend/admin/config/: app_config.py
api_platform/api-platorm-backend/admin/controller/: api_category_controller.py  api_info_controller.py  user_controller.py
api_platform/api-platorm-backend/admin/model/: api_category.py  api_info.py  user.py
api_platform/api-platorm-backend/admin/request/: api_category_request.py  api_info_request.py  user_request.py
api_platform/api-platorm-backend/admin/resource/: application.yml
api_platform/api-platorm-backend/admin/response/: api_category_response.py  api_info_response.py
api_platform/api-platorm-backend/admin/service/: api_category_service.py  api_info_service.py  user_service.py
api_platform/api-platorm-backend/admin/task/: tasks.py
api_platform/api-platorm-backend/common/: pyproject.toml
api_platform/api-platorm-backend/common/config/: application_config.py
api_platform/api-platorm-backend/common/config_read/: config_read.py
api_platform/api-platorm-backend/common/db/: base_model.py  session.py
api_platform/api-platorm-backend/common/docerator/: docerator.py
api_platform/api-platorm-backend/common/exception/base/: base_exception.py
api_platform/api-platorm-backend/common/exception/error/: error_code.py
api_platform/api-platorm-backend/common/exception/handler/: exception_handler.py
api_platform/api-platorm-backend/common/filestorage/controller/: file_storeage_controller.py
api_platform/api-platorm-backend/common/filestorage/s3/: filestorage.py
api_platform/api-platorm-backend/common/filestorage/service/: file_storage_service.py
api_platform/api-platorm-backend/common/filter/: api_filter.py
api_platform/api-platorm-backend/common/id_generator/: id_util.py
api_platform/api-platorm-backend/common/jwt/: jwt_utils.py
api_platform/api-platorm-backend/common/password/: security.py
api_platform/api-platorm-backend/common/redis_util/: redis_util.py
api_platform/api-platorm-backend/common/response/: response_body.py
api_platform/api-platorm-backend/common/router/: router.py
api_platform/api-platorm-backend/common/user/: user_utils.py
api_platform/api-platorm-backend/db/: pyproject.toml
api_platform/api-platorm-backend/user/: pom.xml
api_platform/api-platorm-backend/user/clientuser/: pom.xml
api_platform/api-platorm-backend/user/common/: pom.xml
(+136 files in other folders)
